fixed scrollbar on map, mobile styles, and final searchform

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,18 +1,14 @@
 @import 'bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-#map {
-	height: 100%;
-}
-
 html,
-body,
-#root {
-	height: 100%;
-	width: 100%;
+body {
+	height: 100vh;
 	margin: 0;
+	padding: 0;
 	overflow-x: hidden;
 	font-family: 'Montserrat', sans-serif;
+	background-color: #212529;
 }
 
 .custom-map-control-button {
@@ -31,10 +27,10 @@ body,
 #map {
 	// flexGrow: '1';
 	flex-grow: 1;
-	height: 85vh;
-	width: 100vw;
-	position: relative;
-	z-index: 0;
+	height: 75vh;
+	// width: 100vw;
+	// position: relative;
+	// z-index: 0;
 }
 
 .foodplace-item {
@@ -78,18 +74,23 @@ table {
 	align-items: center;
 	background-color: rgb(33, 37, 41);
 	padding-bottom: 10px;
+	justify-content: space-evenly;
 	display: flex;
-	justify-content: space-around;
 }
 
 .filter-btn {
 	height: fit-content;
 }
 
+.search-input {
+	width: 300px;
+}
 .list-search {
 	background: white;
 	z-index: 4;
 	position: absolute;
+	list-style: none;
+	width: 300px;
 }
 
 .offcanvas {
@@ -105,4 +106,17 @@ Offcanvas {
 	button {
 		background-color: lightgray;
 	}
+}
+
+@media only screen and (max-width: 767px){
+	/*Small smartphones [325px -> 425px]*/
+
+	.filter-search {
+		display: grid;
+	}
+
+	.filter-btn {
+		margin: 10px 0px;
+	}
+
 }
